Fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -93,7 +93,7 @@ h6 {
   height: 100vh;
   left: 0;
   top: 0;
-  overflow: scroll;
+  overflow-y: auto;
 
   background-color: rgba(255, 255, 255, 0.9);
   padding: 2em;
